--- a/app-projects/react-app-example/package.json
+++ b/app-projects/react-app-example/package.json
@@ -43,8 +43,10 @@
     "@testing-library/dom": "^8.18.1",
     "babel-jest": "^29.1.2",
     "babel-loader": "^8.2.5",
+    "cypress": "^10.9.0",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-prettier": "^4.2.1",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.1.2",
