--- a/app-projects/react-app-example/package.json
+++ b/app-projects/react-app-example/package.json
@@ -17,7 +17,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --ignore-path .gitignore .",
-    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js)\""
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js)\"",
+    "cy:open": "cypress open",
+    "test:e2e:dev": "start-server-and-test start http://localhost:3000 cy:open"
   },
   "eslintConfig": {
     "extends": [
@@ -40,6 +42,7 @@
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.3",
+    "@testing-library/cypress": "^8.0.3",
     "@testing-library/dom": "^8.18.1",
     "babel-jest": "^29.1.2",
     "babel-loader": "^8.2.5",
@@ -51,6 +54,7 @@
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.1.2",
     "prettier": "^2.7.1",
+    "start-server-and-test": "^1.14.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
   }
