--- a/app-projects/react-app-example-2/package.json
+++ b/app-projects/react-app-example-2/package.json
@@ -26,7 +26,9 @@
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
     "lint": "eslint --ignore-path .gitignore .",
-    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js)\""
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js)\"",
+    "cy:open": "cypress open",
+    "test:e2e:dev": "start-server-and-test start http://localhost:3000 cy:open"
   },
   "eslintConfig": {
     "extends": [
@@ -47,16 +49,20 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/cypress": "^8.0.3",
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "cypress": "^10.9.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-prettier": "^4.2.1",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
     "prettier": "^2.7.1",
     "process": "^0.11.10",
     "react-app-rewired": "^2.2.1",
+    "start-server-and-test": "^1.14.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.0"
